feat: move terraform commands into init.sh

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ terraform/*.log
 .terraform.tfstate.lock.info
 terraform.tfstate
 terraform.tfstate*
-tfplan
+tfplan*
 
 # Google Cloud credentials
 *.json
